add func: order card, v1
